--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "dotenv": "^17.2.3",
+    "multer": "^2.0.2",
     "pg": "^8.17.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
